management/longhorn/002-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
	traefik.ingress.kubernetes.io/router.middlewares: default-cors-all@kubernetescrd
	# optional basic-auth
	#traefik.ingress.kubernetes.io/router.middlewares: default-basic-auth@kubernetescrd,default-cors-all@kubernetescrd

spec:
  rules:
  - host: {YOUR-HOST-NAME}
    http:
      paths:
      - path: /
        backend:
          serviceName: longhorn-frontend
          servicePort: 80
